fixing android communciations
