# API/authenticator/src/main/java/com/efrei/authenticator/model/UserWebsite.java
@@ -1,6 +1,10 @@
 package com.efrei.authenticator.model;
 
+import com.fasterxml.jackson.annotation.JsonIgnore;
+import org.springframework.beans.factory.annotation.Value;
+
 import javax.persistence.*;
+import java.io.Serializable;
 
 @Entity
 @Table(name = "users_websites")
@@ -9,9 +13,11 @@ import javax.persistence.*;
                 joinColumns = @JoinColumn(name = "USER_ID")),
         @AssociationOverride(name = "primaryKey.website",
                 joinColumns = @JoinColumn(name = "WEBSITE_ID")) })
-public class UserWebsite {
+public class UserWebsite implements Serializable {
+
 
     private UserWebsitesID primaryKey = new UserWebsitesID();
+
 
     private boolean waiting = false;
 
@@ -33,11 +39,17 @@ public class UserWebsite {
     public void setWebsite(Website website){ primaryKey.setWebsite(website);}
 
     @Column(name = "waiting")
+    @Value("${users_websites.waiting:false}")
     public boolean isWaiting() {
         return waiting;
     }
 
     public void setWaiting(boolean waiting) {
         this.waiting = waiting;
+    }
+
+    @Override
+    public String toString(){
+        return this.getWebsite().getUrl();
     }
 }
